adaptando para celular

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <h1>Tabuada</h1>
     </header>
     <section>
-        <div>
+        <div id="calculo">
          <p>
             Qual Tabuada você deseja saber? <br>
          <input type="number" class="form" id="num">
